Move the konsoleWidget specific stuff into createKonsolePreviewerFor

BUG: 316408
REVIEW: 109502